# AiDocPlus

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENT-PLAN.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/bundled-resources/ai-providers/: _meta.json
apps/desktop/src-tauri/bundled-resources/ai-providers/china/glm/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/china/minimax/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/china/minimax-code/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/china/qwen/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/custom/custom/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/international/anthropic/: manifest.json
apps/desktop/src-tauri/bundled-resources/ai-providers/international/gemini/: manifest.json
apps/desktop/src-tauri/bundled-resources/document-templates/: article.json  creative.json  email-draft.json  general.json  meeting.json  report.json  technical.json
apps/desktop/src-tauri/bundled-resources/document-templates/article/doc-press-release/: manifest.json
apps/desktop/src-tauri/bundled-resources/document-templates/article/doc-wechat-article/: manifest.json
apps/desktop/src-tauri/bundled-resources/document-templates/creative/doc-ad-copy/: manifest.json
apps/desktop/src-tauri/bundled-resources/document-templates/email-draft/doc-business-email/: manifest.json
apps/desktop/src-tauri/bundled-resources/managers/资源管理器.app/Contents/: Info.plist
apps/desktop/src-tauri/bundled-resources/project-templates/: _meta.json
apps/desktop/src-tauri/bundled-resources/project-templates/academic/academic-experiment-report/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/academic/academic-literature-review/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/academic/academic-thesis/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/business/business-annual-report/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/business/business-market-analysis/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/business/business-meeting-minutes/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/business/business-project-proposal/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/creative/creative-novel-outline/: manifest.json
apps/desktop/src-tauri/bundled-resources/project-templates/creative/creative-script/: manifest.json
apps/desktop/src-tauri/bundled-resources/prompt-templates/: _meta.json  official.json  party-building.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: api_gateway.rs  api_server.rs  cli.rs  document.rs  main.rs  paths.rs  plugin.rs  resource_engine.rs  template.rs  tools.rs
apps/desktop/src-tauri/src/commands/: ai.rs  coding.rs  document.rs  email.rs  file_system.rs  import.rs  mod.rs  nodejs.rs  plugin.rs  project.rs  python.rs  resource.rs  script_runner.rs  settings.rs  template.rs  tts.rs  wechat.rs
apps/desktop/src-tauri/src/native_export/: docx.rs  html.rs
(+460 files in other folders)
