[package]
name = "aidocplus"
version = "0.3.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
eventsource-client = "0.17"
futures-util = "0.3"
regex = "1"
zip = "8.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-process = "2"
comrak = "0.50"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
docx-rs = "0.4"
base64 = "0.22"
quick-xml = "0.39"
tts = "0.26"
tauri-plugin-updater = "2"
url = "2"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
tauri-plugin-cli = "2"
tauri-plugin-deep-link = "2"
async-stream = "0.3"
ureq = { version = "3", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
encoding_rs = "0.8"
chardetng = "0.1"
aidocplus-manager-rust = { path = "../../../packages/manager-rust" }

# 本地开发构建：快速编译，重在测试
[profile.dev]
incremental = true
opt-level = 0

# 本地开发时依赖库用 opt-level 1，避免运行太慢
[profile.dev.package."*"]
opt-level = 1

# 发布构建：优化 + 多核并行编译
[profile.release]
incremental = false
lto = "thin"
opt-level = 2
strip = true
codegen-units = 8

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
